...
          service = _getService(brokerageUser);

          service!
              .getInstrumentBySymbol(brokerageUser, instrumentStore, symbol)
              .then((instrument) {
            if (instrument != null) {
              final positionType = signal == 'BUY' ? 'Buy' : 'Sell';
              Navigator.push(
                context,
                MaterialPageRoute(
                  builder: (context) => TradeInstrumentWidget(
                    brokerageUser,
                    service!,
...
    }
    // realizealpha://rebalancing OR https://realizealpha.com/rebalancing
    else if (host == 'rebalancing' ||
        (pathSegments.isNotEmpty && pathSegments[0] == 'rebalancing')) {
      await _navigateToRebalancing(context);
    }
    // realizealpha://instrument/AAPL OR https://realizealpha.com/instrument/AAPL
    else if (host == 'instrument' ||
        (pathSegments.isNotEmpty && pathSegments[0] == 'instrument')) {
      String? symbol;
      if (host == 'instrument' && pathSegments.isNotEmpty) {
        symbol = pathSegments[0];
      } else if (pathSegments.length > 1) {
...
        // backgroundColor: Colors.black.withValues(alpha: 0.05),
        height:
            56, // Default is 56 for BottomNavigationBar, 80 for NavigationBar
        destinations: const <NavigationDestination>[
          NavigationDestination(
            icon: Icon(Icons.account_balance), //home
            label: 'Portfolio',
          ),
          NavigationDestination(
            icon: Icon(Icons.history),
            label: 'History',
          ),
          NavigationDestination(
            icon: Icon(Icons.search),
            label: 'Search',
          ),
          NavigationDestination(
            icon: Icon(Icons.insights),
            label: 'Signals', // Trade Signals
          ),
          NavigationDestination(
            icon: Icon(Icons.groups),
            label: 'Investors',
          ),
          // NavigationDestination(
          //   icon: Icon(Icons.account_circle), // manage_accounts //person
          //   label: 'Accounts',
          // ),
          // if (auth.currentUser != null) ...[
...
  //         },
  //       ));
  //     }
  //     userWidgets.addAll([
  //       // ListTile(
  //       // leading: const Icon(Icons.person_add),
  //       // title: const Text("Link Brokerage Account"),
  //       // //selected: userInfo!.profileName == 1,
  //       // onTap: () {
  //       //   Navigator.pop(context);
  //       //   _openLogin();
  //       // },
  //       // );
...
